--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Aid1</string>
+    <string name="facebook_app_id">1879907818983072</string>
+    <string name="fb_login_protocol_scheme">fb1879907818983072</string>
+
+
 </resources>
